<resources>
    <string name="app_name">SoMuchInterfaces</string>
    <string name="layout1">Interfaz 1</string>
    <string name="layout2">Interfaz 2</string>
    <string name="layout3">Interfaz 3</string>
    <string name="layout4">Interfaz 4</string>
    <string name="tittle">Elige una interfaz:</string>
    <string name="conectar">Conectar</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="producto">Producto</string>
    <string name="subtotal">Subtotal</string>
    <string name="jabon">Jabón de manos x1</string>
    <string name="champu">Shampoo Monster x1</string>
    <string name="pastas">Pastas Duria x2</string>
    <string name="detergente">Detergente Limpiadin x1</string>
    <string name="Precio1">$2</string>
    <string name="Precio2">$10</string>
    <string name="Precio3">$18</string>
    <string name="Precio4">$13,4</string>
    <string name="costo_envio">Costo envío</string>
    <string name="cupon">Cupón</string>
    <string name="total">Total</string>
    <string name="PrecioSubtotal">$43,4</string>
    <string name="EnvioPrecio">$10</string>
    <string name="DescCupon">-$5</string>
    <string name="PrecioTotal">$48,4</string>
    <string name="nameText">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="civilStaetText">Estado Civil</string>
    <string name="positionText">Posicion</string>
    <string-array name="civilStates">
        <item>Casado</item>
        <item>Soltero</item>
    </string-array>
    <string-array name="positions">
        <item>Ventas</item>
        <item>Informática</item>
        <item>Jardinería</item>
    </string-array>
</resources>