<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Layout1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/conectar"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginHorizontal="45dp"
            android:layout_marginTop="25dp"
            android:autofillHints="@string/correo"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginHorizontal="45dp"
            android:autofillHints="@string/contrase_a"
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@android:color/darker_gray"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <Button
            android:id="@+id/button"
            android:layout_width="322dp"
            android:layout_height="91dp"
            android:layout_marginHorizontal="45dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/iniciar_sesi_n"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/olvidaste_tu_contrase_a"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>